# PairProgrammingHW

./: .gitignore  CMakeLists.txt  README.md
data/: 26.txt  4.txt  499361.txt  9423886.txt  different_ans.txt  exception.txt  invalid_input2.txt  invalid_input3.txt  invalid_input4.txt  invalid_input5.txt  invalid_input8.txt  invalid_shape1.txt  invalid_shape2.txt  invalid_shape3.txt  invalid_shape4.txt  invalid_shape5.txt  invalid_shape6.txt  invalid_shape7.txt  overlap_batch.txt  same_ans.txt
src/: Point.cpp  Point.h  Shapes.cpp  Shapes.h  StdInterface.cpp  StdInterface.h  interface.cpp  interface.h  main.cpp
test/: testCore.cpp  testExceptions.cpp  testPoint.cpp  testShapes.cpp  testStdCore.cpp
